fix: avoid churning AWS clients in the cache by closing all clients when discovering a "new" one